tests/invalid/missing_observed_expr_single.esm
{
  "esm": "0.1.0",
  "metadata": {
    "name": "MissingObservedExprSingle",
    "description": "Single observed variable missing expression"
  },
  "models": {
    "TestModel": {
      "variables": {
        "x": { "type": "state", "units": "mol", "default": 1.0 },
        "total": { "type": "observed", "units": "mol" }
      },
      "equations": [
        {
          "lhs": { "op": "D", "args": ["x"], "wrt": "t" },
          "rhs": { "op": "*", "args": [-0.1, "x"] }
        }
      ]
    }
  }
}